--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,32 +1,36 @@
 <html>  
 <head>       
-<link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstr ap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstr ap-theme.min.css">
-    <link href="/twitter-bootstrap/twitter-bootstrap-v2/docs/assets/css/bootstrap.css" rel="stylesheet">
+    
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap .min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js">
-    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    
+    <!-- Loading the AngularJS file -->
+    <script src="angularjs/signup.js"></script>
 </head>
-<body>
+<body ng-app="signup" ng-controller="signup">
 
-<form action="/signuppage" method="post">
-    <div class="text-box">
+
+<div class="text-box">
     <div class="signup-wrapper">
     <h1>Join Twitter today</h1>
-    <input type="text" class="textbox-control" name="fullName" id="fullName" placeholder="Full Name" required maxlength="20"></br></br>
-    <input type="email" class="textbox-control" name="emailID" id="email" placeholder="Phone or Email" required></br></br>
-    <input type="password" class="textbox-control"name="password" id="inputPassword" placeholder="Password" required></br></br>
+    <input type="text" class="textbox-control" name="fullName" id="fullName" placeholder="Full Name" required maxlength="20" ng-model="fullName"></br></br>
+    <input type="email" class="textbox-control" name="emailID" id="email" placeholder="Phone or Email" required ng-model="emailID"></br></br>
+    <input type="password" class="textbox-control"name="password" id="inputPassword" placeholder="Password" required ng-model="password"></br></br>
     <div class="signup-wrapper">
+    
+     <div class="alert alert-danger" ng-hide="registered_email">
+                    <strong>Email Exists. Please try a different emailID</strong>
+                </div>
 
-    <input type="submit" style="color:white" class="submit-button" value="Sign-up" style="position:relative;left:0px;"></br></br>
+                <div class="alert alert-danger" ng-hide="unexpected_error">
+                    <strong>Unexpected error,try again</strong>
+                </div>
+
+    <input type="submit" style="color:white" class="submit-button" value="Sign-up" style="position:relative;left:0px" ng-click="submit();""></br></br>
     </div>
   </div>
-</form>
-<script src="twitter-bootstrap-v2/docs/assets/js/jquery.js"></script>
-<script src="twitter-bootstrap-v2/docs/assets/js/bootstrap-dropdown.js"></script>
+
 </body>
 </html>
