--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -22,6 +22,10 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </head>
 <body ng-app="login" ng-controller="login">
+
+<p style="text-align:center"><img src="pics/logo.png" style="position: absolute; top: 0px;z-index: 0;" alt="twitter" height="46px" width="46px"></p>
+		<img src="pics/unnamed.png" style="position: absolute;align:center;left: 0px;top: 0px;z-index: -1;" alt="nav-bar" height="50px" width="100%">
+		
 <div align="right">
 <h1>Not a user?</h1>
 <a href="/signup">Sign up here</a>
